--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "ng-web-console": "^1.2.0",
     "prettier": "^3.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
